@@ -115,8 +115,6 @@ tasks.withType<Test> {
         "java.desktop/sun.awt=ALL-UNNAMED",
         "--add-opens",
         "java.desktop/java.awt=ALL-UNNAMED",
-        "--add-opens",
-        "java.desktop/javax.sound=ALL_UNNAMED",
     )
 
     extensions.configure<KoverTaskExtension> { isDisabled.set(name != "unitTest") }
